--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "fitnessbam",
-    "short_name": "fitnessbam",
+    "name": "fitness",
+    "short_name": "fitness",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
