--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "fitnessbam" "\0"
+            VALUE "FileDescription", "fitness" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "fitnessbam" "\0"
+            VALUE "InternalName", "fitness" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "fitnessbam.exe" "\0"
-            VALUE "ProductName", "fitnessbam" "\0"
+            VALUE "OriginalFilename", "fitness.exe" "\0"
+            VALUE "ProductName", "fitness" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
