--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: Fitness
-description: "A fitness app with ab, mountain climber and  as exercises."
+description: "A fitness app with some gym exercises."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 0.3.0
+version: 0.4.0
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
@@ -31,7 +31,21 @@ flutter:
 
   assets:
     - images/burpees_in_room.png
-    - images/alternatingBicepCurls.webp
-    - images/abCrunches.webp
-    - images/mountainClimbers.webp
+    - images/abdominal_supra_solo.png
+    - images/biceps.png
+    - images/cadeira_abdutora.png
+    - images/cadeira_extensora.png
+    - images/cadeira_flexora.png
+    - images/crucifixo.png
+    - images/desenvolvimento.png
+    - images/elevacao_lateral.png
+    - images/esteira.png
+    - images/esteira2.png
+    - images/leg45.png
+    - images/leg_horizontal.png
+    - images/mesa_flexora.png
+    - images/panturrilha_sentado.png
+    - images/puxada_articulada.png
+    - images/remada_articulada_supinada.png
+    - images/supino_vertical.png
     - COPYING
