--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,6 +26,7 @@ android {
     namespace "com.example.fitnessamp"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion = "27.0.12077973"
+    android.buildFeatures.buildConfig = true
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
